# Manipulator-MoveIt

./: README.md
my_moveit/: .setup_assistant  package.xml
my_moveit/config/: fake_controllers.yaml  gazebo_ur3.urdf  joint_limits.yaml  ur3.srdf
my_moveit/launch/: demo.launch  gazebo.launch  planning_context.launch  ros_controllers.launch  sensor_manager.launch.xml
my_moveit/scripts/: demo.py
proper_test/: CMakeLists.txt  package.xml
proper_test/launch/: display.launch
proper_test/meshes/daes/: finger.dae  gripperBase.dae  link6.dae
proper_test/urdf/: ur3.urdf
